--- a/index.html
+++ b/index.html
@@ -16,97 +16,109 @@
 	</head>
 
 	<body>
-    <div class="container">
-		<section>
-			<div>
-				<img src="/images/image-patrick.jpg"/>
-				<div>Patrick Abrams</div>
-				<div>Verified Graduate</div>
-			</div>
-			<div>
-				I received a job offer mid-course, and the subjects I learned were
-				current, if not more so, in the company I joined. I honestly feel I got
-				every penny’s worth.
-			</div>
-			<div>
-				“ I was an EMT for many years before I joined the bootcamp. I’ve been
-				looking to make a transition and have heard some people who had an
-				amazing experience here. I signed up for the free intro course and found
-				it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was
-				the best - and most grueling - time of my life. Since completing the
-				course, I’ve successfully switched careers, working as a Software
-				Engineer at a VR startup. ”
-			</div>
-		</section>
+		<div class="container">
+			<section class="card" style="--background: hsl(263, 55%, 52%)">
+				<div class="card_info">
+					<img src="/images/image-patrick.jpg" />
+					<div>
+						<div>Patrick Abrams</div>
+						<p>Verified Graduate</p>
+					</div>
+				</div>
+				<div>
+					I received a job offer mid-course, and the subjects I learned were
+					current, if not more so, in the company I joined. I honestly feel I
+					got every penny’s worth.
+				</div>
+				<div>
+					“ I was an EMT for many years before I joined the bootcamp. I’ve been
+					looking to make a transition and have heard some people who had an
+					amazing experience here. I signed up for the free intro course and
+					found it incredibly fun! I enrolled shortly thereafter. The next 12
+					weeks was the best - and most grueling - time of my life. Since
+					completing the course, I’ve successfully switched careers, working as
+					a Software Engineer at a VR startup. ”
+				</div>
+			</section>
 
-		<section>
-			<div>
-				<img src="/images/image-kira.jpg"/>
-				<div>Kira Whittle</div>
-				<div>Verified Graduate</div>
-			</div>
-			<div>The team was very supportive and kept me motivated</div>
-			<div>
-				“ I started as a total newbie with virtually no coding skills. I now
-				work as a mobile engineer for a big company. This was one of the best
-				investments I’ve made in myself. ”
-			</div>
-		</section>
+			<section class="card" style="--background: hsl(217, 19%, 35%)">
+				<div class="card_info">
+					<img src="/images/image-kira.jpg" />
+					<div>
+						<div>Kira Whittle</div>
+						<p>Verified Graduate</p>
+					</div>
+				</div>
+				<div>The team was very supportive and kept me motivated</div>
+				<div>
+					“ I started as a total newbie with virtually no coding skills. I now
+					work as a mobile engineer for a big company. This was one of the best
+					investments I’ve made in myself. ”
+				</div>
+			</section>
 
-		<section>
-			<div>
-				<img src="/images/image-jeanette.jpg"/>
-				<div>Jeanette Harmon</div>
-				<div>Verified Graduate</div>
-			</div>
-			<div>An overall wonderful and rewarding experience</div>
-			<div>
-				“ Thank you for the wonderful experience! I now have a job I really
-				enjoy, and make a good living while doing something I love. ”
-			</div>
-		</section>
+			<section class="card" style="--color: black">
+				<div class="card_info">
+					<img src="/images/image-jeanette.jpg" />
+					<div>
+						<div>Jeanette Harmon</div>
+						<p>Verified Graduate</p>
+					</div>
+				</div>
+				<div>An overall wonderful and rewarding experience</div>
+				<div>
+					“ Thank you for the wonderful experience! I now have a job I really
+					enjoy, and make a good living while doing something I love. ”
+				</div>
+			</section>
 
-		<section>
-			<div>
-				<img src="/images/image-jonathan.jpg"/>
-				<div>Jonathan Walters</div>
-				<div>Verified Graduate</div>
-			</div>
-			<div>
-				Awesome teaching support from TAs who did the bootcamp themselves.
-				Getting guidance from them and learning from their experiences was easy.
-			</div>
-			<div>
-				“ The staff seem genuinely concerned about my progress which I find
-				really refreshing. The program gave me the confidence necessary to be
-				able to go out in the world and present myself as a capable junior
-				developer. The standard is above the rest. You will get the personal
-				attention you need from an incredible community of smart and amazing
-				people. ”
-			</div>
-		</section>
-		<section>
-			<div>
-				<img src="/images/image-daniel.jpg"/>
-				<div>Daniel Clifford</div>
-				<div>Verified Graduate</div>
-			</div>
-			<div>Such a life-changing experience. Highly recommended!</div>
-			<div>
-				“ Before joining the bootcamp, I’ve never written a line of code. I
-				needed some structure from professionals who can help me learn
-				programming step by step. I was encouraged to enroll by a former student
-				of theirs who can only say wonderful things about the program. The
-				entire curriculum and staff did not disappoint. They were very hands-on
-				and I never had to wait long for assistance. The agile team project, in
-				particular, was outstanding. It took my learning to the next level in a
-				way that no tutorial could ever have. In fact, I’ve often referred to it
-				during interviews as an example of my developent experience. It
-				certainly helped me land a job as a full-stack developer after receiving
-				multiple offers. 100% recommend! ”
-			</div>
-		</section>
-</div>
+			<section class="card" style="--background: hsl(219, 29%, 14%)">
+				<div class="card_info">
+					<img src="/images/image-jonathan.jpg" />
+					<div>
+						<div>Jonathan Walters</div>
+						<p>Verified Graduate</p>
+					</div>
+				</div>
+				<div>
+					Awesome teaching support from TAs who did the bootcamp themselves.
+					Getting guidance from them and learning from their experiences was
+					easy.
+				</div>
+				<div>
+					“ The staff seem genuinely concerned about my progress which I find
+					really refreshing. The program gave me the confidence necessary to be
+					able to go out in the world and present myself as a capable junior
+					developer. The standard is above the rest. You will get the personal
+					attention you need from an incredible community of smart and amazing
+					people. ”
+				</div>
+			</section>
+
+			<section class="card" style="--color: black">
+				<div class="card_info">
+					<img src="/images/image-daniel.jpg" />
+					<div>
+						<div>Daniel Clifford</div>
+						<p>Verified Graduate</p>
+					</div>
+				</div>
+				<div>Such a life-changing experience. Highly recommended!</div>
+				<div>
+					“ Before joining the bootcamp, I’ve never written a line of code. I
+					needed some structure from professionals who can help me learn
+					programming step by step. I was encouraged to enroll by a former
+					student of theirs who can only say wonderful things about the program.
+					The entire curriculum and staff did not disappoint. They were very
+					hands-on and I never had to wait long for assistance. The agile team
+					project, in particular, was outstanding. It took my learning to the
+					next level in a way that no tutorial could ever have. In fact, I’ve
+					often referred to it during interviews as an example of my developent
+					experience. It certainly helped me land a job as a full-stack
+					developer after receiving multiple offers. 100% recommend! ”
+				</div>
+			</section>
+		</div>
 		<div class="attribution">
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
