--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<body>
 		<div class="container">
-			<section class="card" style="--background: hsl(263, 55%, 52%)">
+			<section class="card" style="--background: hsl(263, 55%, 52%); grid-area: 1;">
 				<div class="card_info">
 					<img src="/images/image-patrick.jpg" />
 					<div>
@@ -25,12 +25,12 @@
 						<p>Verified Graduate</p>
 					</div>
 				</div>
-				<div>
+				<h2>
 					I received a job offer mid-course, and the subjects I learned were
 					current, if not more so, in the company I joined. I honestly feel I
 					got every penny’s worth.
-				</div>
-				<div>
+				</h2>
+				<p>
 					“ I was an EMT for many years before I joined the bootcamp. I’ve been
 					looking to make a transition and have heard some people who had an
 					amazing experience here. I signed up for the free intro course and
@@ -38,10 +38,10 @@
 					weeks was the best - and most grueling - time of my life. Since
 					completing the course, I’ve successfully switched careers, working as
 					a Software Engineer at a VR startup. ”
-				</div>
+				</p>
 			</section>
 
-			<section class="card" style="--background: hsl(217, 19%, 35%)">
+			<section class="card" style="--background: hsl(217, 19%, 35%); grid-area: 2;">
 				<div class="card_info">
 					<img src="/images/image-kira.jpg" />
 					<div>
@@ -49,15 +49,15 @@
 						<p>Verified Graduate</p>
 					</div>
 				</div>
-				<div>The team was very supportive and kept me motivated</div>
-				<div>
+				<h2>The team was very supportive and kept me motivated</h2>
+				<p>
 					“ I started as a total newbie with virtually no coding skills. I now
 					work as a mobile engineer for a big company. This was one of the best
 					investments I’ve made in myself. ”
-				</div>
+				</p>
 			</section>
 
-			<section class="card" style="--color: black">
+			<section class="card" style="--color: black;  grid-area: 3;">
 				<div class="card_info">
 					<img src="/images/image-jeanette.jpg" />
 					<div>
@@ -65,14 +65,14 @@
 						<p>Verified Graduate</p>
 					</div>
 				</div>
-				<div>An overall wonderful and rewarding experience</div>
-				<div>
+				<h2>An overall wonderful and rewarding experience</h2>
+				<p>
 					“ Thank you for the wonderful experience! I now have a job I really
 					enjoy, and make a good living while doing something I love. ”
-				</div>
+				</p>
 			</section>
 
-			<section class="card" style="--background: hsl(219, 29%, 14%)">
+			<section class="card" style="--background: hsl(219, 29%, 14%);  grid-area: '4';">
 				<div class="card_info">
 					<img src="/images/image-jonathan.jpg" />
 					<div>
@@ -80,22 +80,22 @@
 						<p>Verified Graduate</p>
 					</div>
 				</div>
-				<div>
+				<h2>
 					Awesome teaching support from TAs who did the bootcamp themselves.
 					Getting guidance from them and learning from their experiences was
 					easy.
-				</div>
-				<div>
+				</h2>
+				<p>
 					“ The staff seem genuinely concerned about my progress which I find
 					really refreshing. The program gave me the confidence necessary to be
 					able to go out in the world and present myself as a capable junior
 					developer. The standard is above the rest. You will get the personal
 					attention you need from an incredible community of smart and amazing
 					people. ”
-				</div>
+				</p>
 			</section>
 
-			<section class="card" style="--color: black">
+			<section class="card" style="--color: black; grid-area: 5;">
 				<div class="card_info">
 					<img src="/images/image-daniel.jpg" />
 					<div>
@@ -103,8 +103,8 @@
 						<p>Verified Graduate</p>
 					</div>
 				</div>
-				<div>Such a life-changing experience. Highly recommended!</div>
-				<div>
+				<h2>Such a life-changing experience. Highly recommended!</h2>
+				<p>
 					“ Before joining the bootcamp, I’ve never written a line of code. I
 					needed some structure from professionals who can help me learn
 					programming step by step. I was encouraged to enroll by a former
@@ -116,7 +116,7 @@
 					often referred to it during interviews as an example of my developent
 					experience. It certainly helped me land a job as a full-stack
 					developer after receiving multiple offers. 100% recommend! ”
-				</div>
+				</p>
 			</section>
 		</div>
 		<div class="attribution">
