--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<body>
 		<div class="container">
-			<section class="card" style="--background: hsl(263, 55%, 52%); grid-area: 1;">
+			<section class="card" style="--background: hsl(263, 55%, 52%); grid-area: one ;">
 				<div class="card_info">
 					<img src="/images/image-patrick.jpg" />
 					<div>
@@ -41,7 +41,7 @@
 				</p>
 			</section>
 
-			<section class="card" style="--background: hsl(217, 19%, 35%); grid-area: 2;">
+			<section class="card" style="--background: hsl(217, 19%, 35%); grid-area: two;">
 				<div class="card_info">
 					<img src="/images/image-kira.jpg" />
 					<div>
@@ -57,7 +57,7 @@
 				</p>
 			</section>
 
-			<section class="card" style="--color: black;  grid-area: 3;">
+			<section class="card" style="--color: black;  grid-area: three ;">
 				<div class="card_info">
 					<img src="/images/image-jeanette.jpg" />
 					<div>
@@ -72,7 +72,7 @@
 				</p>
 			</section>
 
-			<section class="card" style="--background: hsl(219, 29%, 14%);  grid-area: '4';">
+			<section class="card" style="--background: hsl(219, 29%, 14%);  grid-area:four;">
 				<div class="card_info">
 					<img src="/images/image-jonathan.jpg" />
 					<div>
@@ -95,7 +95,7 @@
 				</p>
 			</section>
 
-			<section class="card" style="--color: black; grid-area: 5;">
+			<section class="card" style="--color: black; grid-area: fife;">
 				<div class="card_info">
 					<img src="/images/image-daniel.jpg" />
 					<div>
