--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="container">
 			<section class="card" style="--background: hsl(263, 55%, 52%); grid-area: one ;">
 				<div class="card_info">
-					<img src="/images/image-patrick.jpg" />
+					<img src="./images/image-patrick.jpg" />
 					<div>
 						<div>Patrick Abrams</div>
 						<p>Verified Graduate</p>
@@ -43,7 +43,7 @@
 
 			<section class="card" style="--background: hsl(217, 19%, 35%); grid-area: two;">
 				<div class="card_info">
-					<img src="/images/image-kira.jpg" />
+					<img src="./images/image-kira.jpg" />
 					<div>
 						<div>Kira Whittle</div>
 						<p>Verified Graduate</p>
@@ -59,7 +59,7 @@
 
 			<section class="card" style="--color: black;  grid-area: three ;">
 				<div class="card_info">
-					<img src="/images/image-jeanette.jpg" />
+					<img src="./images/image-jeanette.jpg" />
 					<div>
 						<div>Jeanette Harmon</div>
 						<p>Verified Graduate</p>
@@ -74,7 +74,7 @@
 
 			<section class="card" style="--background: hsl(219, 29%, 14%);  grid-area:four;">
 				<div class="card_info">
-					<img src="/images/image-jonathan.jpg" />
+					<img src="./images/image-jonathan.jpg" />
 					<div>
 						<div>Jonathan Walters</div>
 						<p>Verified Graduate</p>
@@ -97,7 +97,7 @@
 
 			<section class="card" style="--color: black; grid-area: fife;">
 				<div class="card_info">
-					<img src="/images/image-daniel.jpg" />
+					<img src="./images/image-daniel.jpg" />
 					<div>
 						<div>Daniel Clifford</div>
 						<p>Verified Graduate</p>
@@ -123,7 +123,7 @@
 			Challenge by
 			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
 				>Frontend Mentor</a
-			>. Coded by <a href="#">Your Name Here</a>.
+			>. Coded by <a href="https://github.com/Dev-Y0U">Dev.YOU</a>.
 		</div>
 	</body>
 </html>
